ADMIN
gestione prenotazioni (lista+cancel); utente: disdetta senza email; link navbar